<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.bank.config</groupId>
    <artifactId>config-client</artifactId>
    <version>1.0.0</version>
    <packaging>jar</packaging>

    <name>Config Client</name>
    <description>轻量级配置客户端，用于从配置中心拉取配置</description>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- HTTP客户端 -->
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.13</version>
        </dependency>

        <!-- JSON处理 -->
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.13.0</version>
        </dependency>

        <!-- YAML处理 -->
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-yaml</artifactId>
            <version>2.13.0</version>
        </dependency>

        <!-- 日志 -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.32</version>
        </dependency>



        <!-- 测试依赖 -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>3.12.4</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.2</version>
            </plugin>
        </plugins>
    </build>
    <distributionManagement>
        <!-- 正式版本仓库 -->
        <repository>
            <id>repo-wdhtu</id> <!-- 仓库ID，需与 settings.xml 中的 server.id 一致 -->
            <name>Aliyun Private Repository</name>
            <url>https://packages.aliyun.com/6892eee0e5ba87aaf50064a8/maven/repo-wdhtu</url>
        </repository>


        <!-- 若需要发布快照版本，添加快照仓库（地址可能不同，需确认） -->
        <snapshotRepository>
            <id>repo-wdhtu</id>
            <name>Aliyun Private Snapshot Repository</name>
            <url>https://packages.aliyun.com/6892eee0e5ba87aaf50064a8/maven/repo-wdhtu-snapshots</url> <!-- 替换为实际快照仓库地址 -->
        </snapshotRepository>
    </distributionManagement>
</project> 